deploy/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: noctf
  labels:
    noctf.io/purpose: platform
    app.kubernetes.io/part-of: noctf
