deploy/k8s/base/grafana.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: grafana
  namespace: noctf
  labels:
    app.kubernetes.io/part-of: noctf
spec:
  serviceName: grafana
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      automountServiceAccountToken: false
      nodeSelector:
        noctf.io/node-role: platform
      containers:
      - name: grafana
        image: docker.m.daocloud.io/grafana/grafana:13.2.0@sha256:3fd54ae1214669f8355f065ec9f6445d5279a3d77095ab048ca045685272429b
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: '1'
            memory: 1Gi
        volumeMounts:
        - name: data
          mountPath: /var/lib/grafana
        - name: datasources
          mountPath: /etc/grafana/provisioning/datasources
        - name: dashboards
          mountPath: /etc/grafana/provisioning/dashboards
        - name: dashboard-files
          mountPath: /var/lib/grafana/dashboards/common
        - name: dashboard-kubernetes
          mountPath: /var/lib/grafana/dashboards/kubernetes
        readinessProbe:
          httpGet:
            path: /api/health
            port: 3000
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: grafana-pvc
      - name: datasources
        configMap:
          name: grafana-datasources
      - name: dashboards
        configMap:
          name: grafana-dashboards
      - name: dashboard-files
        configMap:
          name: grafana-dashboard-files
      - name: dashboard-kubernetes
        configMap:
          name: grafana-dashboard-kubernetes
      securityContext:
        runAsUser: 472
        runAsGroup: 472
        fsGroup: 472
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: noctf
  labels:
    app.kubernetes.io/part-of: noctf
spec:
  selector:
    app: grafana
  ports:
  - name: http
    port: 3000
    targetPort: 3000
