deploy/k8s/base/nats.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nats
  namespace: noctf
  labels:
    app.kubernetes.io/part-of: noctf
spec:
  serviceName: nats
  replicas: 1
  selector:
    matchLabels:
      app: nats
  template:
    metadata:
      labels:
        app: nats
    spec:
      automountServiceAccountToken: false
      nodeSelector:
        noctf.io/node-role: platform
      containers:
      - name: nats
        image: docker.m.daocloud.io/library/nats:2.12.2-alpine@sha256:2d5fce3229ae5741f4ef9225aff95dc4dc036455931eaf77a3eec33fddaa192d
        ports:
        - containerPort: 4222
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: '1'
            memory: 1Gi
        volumeMounts:
        - name: data
          mountPath: /data
        args:
        - -js
        - -sd
        - /data
        - -m
        - '8222'
        readinessProbe:
          httpGet:
            path: /healthz?js-enabled-only=true
            port: 8222
          periodSeconds: 5
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: nats-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: nats
  namespace: noctf
  labels:
    app.kubernetes.io/part-of: noctf
spec:
  selector:
    app: nats
  ports:
  - name: client
    port: 4222
    targetPort: 4222
  - name: monitoring
    port: 8222
    targetPort: 8222
