deploy/k8s/base/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: noctf
  labels:
    app.kubernetes.io/part-of: noctf
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-cluster-dns-egress
  namespace: noctf
  labels:
    app.kubernetes.io/part-of: noctf
spec:
  endpointSelector: {}
  egress:
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s:k8s-app: kube-dns
    toPorts:
    - ports:
      - port: '53'
        protocol: ANY
      rules:
        dns:
          - matchPattern: '*.*.svc.cluster.local'
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-to-postgres
  namespace: noctf
  labels:
    app.kubernetes.io/part-of: noctf
spec:
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: postgres
    ports:
    - port: 5432
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-to-redis
  namespace: noctf
  labels:
    app.kubernetes.io/part-of: noctf
spec:
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: redis
    ports:
    - port: 6379
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-backend
  namespace: noctf
  labels:
    app.kubernetes.io/part-of: noctf
spec:
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: envoy-gateway-system
      podSelector:
        matchLabels:
          app.kubernetes.io/name: envoy
    ports:
    - port: 8080
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-scoring-callback-to-backend
  namespace: noctf
  labels:
    app.kubernetes.io/part-of: noctf
spec:
  podSelector:
    matchLabels:
      app: backend
      noctf.io/internal-role: scoring-callback-gateway
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: runtime
      podSelector:
        matchExpressions:
        - key: noctf.io/purpose
          operator: In
          values:
          - awd-checker
          - awdp-checker
    ports:
    - port: 8080
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-to-runtime-proxy-targets
  namespace: noctf
  labels:
    app.kubernetes.io/part-of: noctf
spec:
  podSelector:
    matchLabels:
      noctf.io/runtime-proxy-gateway: 'true'
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: runtime
      podSelector:
        matchLabels:
          noctf.io/runtime-proxy-target: 'true'
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-to-rustfs
  namespace: noctf
  labels:
    app.kubernetes.io/part-of: noctf
spec:
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: rustfs
    ports:
    - port: 9000
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: worker-to-rustfs
  namespace: noctf
  labels:
    app.kubernetes.io/part-of: noctf
spec:
  podSelector:
    matchLabels:
      app: worker
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: rustfs
    ports:
    - port: 9000
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: storage-init-to-rustfs
  namespace: noctf
  labels:
    app.kubernetes.io/part-of: noctf
spec:
  podSelector:
    matchLabels:
      app: storage-init
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: rustfs
    ports:
    - port: 9000
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-rustfs
  namespace: noctf
  labels:
    app.kubernetes.io/part-of: noctf
spec:
  podSelector:
    matchLabels:
      app: rustfs
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: envoy-gateway-system
      podSelector:
        matchLabels:
          app.kubernetes.io/name: envoy
    - podSelector:
        matchLabels:
          app: backend
    - podSelector:
        matchLabels:
          app: worker
    - podSelector:
        matchLabels:
          app: storage-init
    ports:
    - port: 9000
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: worker-to-postgres
  namespace: noctf
  labels:
    app.kubernetes.io/part-of: noctf
spec:
  podSelector:
    matchLabels:
      app: worker
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: postgres
    ports:
    - port: 5432
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: worker-to-redis
  namespace: noctf
  labels:
    app.kubernetes.io/part-of: noctf
spec:
  podSelector:
    matchLabels:
      app: worker
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: redis
    ports:
    - port: 6379
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: runner-to-postgres
  namespace: noctf
  labels:
    app.kubernetes.io/part-of: noctf
spec:
  podSelector:
    matchLabels:
      app: runner
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: postgres
    ports:
    - port: 5432
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: runner-to-redis
  namespace: noctf
  labels:
    app.kubernetes.io/part-of: noctf
spec:
  podSelector:
    matchLabels:
      app: runner
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: redis
    ports:
    - port: 6379
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-postgres
  namespace: noctf
  labels:
    app.kubernetes.io/part-of: noctf
spec:
  podSelector:
    matchLabels:
      app: postgres
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: backend
    - podSelector:
        matchLabels:
          app: worker
    - podSelector:
        matchLabels:
          app: runner
    ports:
    - port: 5432
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-redis
  namespace: noctf
  labels:
    app.kubernetes.io/part-of: noctf
spec:
  podSelector:
    matchLabels:
      app: redis
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: backend
    - podSelector:
        matchLabels:
          app: worker
    - podSelector:
        matchLabels:
          app: runner
    ports:
    - port: 6379
      protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: runner-to-kubernetes-api
  namespace: noctf
  labels:
    app.kubernetes.io/part-of: noctf
spec:
  endpointSelector:
    matchLabels:
      app: runner
  egress:
  - toEntities:
    - kube-apiserver
    toPorts:
    - ports:
      - port: '443'
        protocol: TCP
      - port: '6443'
        protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: migration-to-postgres
  namespace: noctf
  labels:
    app.kubernetes.io/part-of: noctf
spec:
  podSelector:
    matchLabels:
      app: migration
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: postgres
    ports:
    - port: 5432
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-migration-to-postgres
  namespace: noctf
  labels:
    app.kubernetes.io/part-of: noctf
spec:
  podSelector:
    matchLabels:
      app: postgres
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: migration
    ports:
    - port: 5432
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-to-nats
  namespace: noctf
  labels:
    app.kubernetes.io/part-of: noctf
spec:
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: nats
    ports:
    - protocol: TCP
      port: 4222
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nats-from-backend
  namespace: noctf
  labels:
    app.kubernetes.io/part-of: noctf
spec:
  podSelector:
    matchLabels:
      app: nats
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: backend
    ports:
    - protocol: TCP
      port: 4222
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-to-loki
  namespace: noctf
  labels:
    app.kubernetes.io/part-of: noctf
spec:
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: loki
    ports:
    - protocol: TCP
      port: 3100
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: loki-from-backend
  namespace: noctf
  labels:
    app.kubernetes.io/part-of: noctf
spec:
  podSelector:
    matchLabels:
      app: loki
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: backend
    ports:
    - protocol: TCP
      port: 3100
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: prometheus-to-backend
  namespace: noctf
  labels:
    app.kubernetes.io/part-of: noctf
spec:
  podSelector:
    matchLabels:
      app: prometheus
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: backend
    ports:
    - protocol: TCP
      port: 9464
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-from-prometheus
  namespace: noctf
  labels:
    app.kubernetes.io/part-of: noctf
spec:
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: prometheus
    ports:
    - protocol: TCP
      port: 9464
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: worker-to-nats
  namespace: noctf
  labels:
    app.kubernetes.io/part-of: noctf
spec:
  podSelector:
    matchLabels:
      app: worker
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: nats
    ports:
    - protocol: TCP
      port: 4222
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nats-from-worker
  namespace: noctf
  labels:
    app.kubernetes.io/part-of: noctf
spec:
  podSelector:
    matchLabels:
      app: nats
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: worker
    ports:
    - protocol: TCP
      port: 4222
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: worker-to-loki
  namespace: noctf
  labels:
    app.kubernetes.io/part-of: noctf
spec:
  podSelector:
    matchLabels:
      app: worker
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: loki
    ports:
    - protocol: TCP
      port: 3100
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: loki-from-worker
  namespace: noctf
  labels:
    app.kubernetes.io/part-of: noctf
spec:
  podSelector:
    matchLabels:
      app: loki
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: worker
    ports:
    - protocol: TCP
      port: 3100
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: prometheus-to-worker
  namespace: noctf
  labels:
    app.kubernetes.io/part-of: noctf
spec:
  podSelector:
    matchLabels:
      app: prometheus
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: worker
    ports:
    - protocol: TCP
      port: 9464
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: worker-from-prometheus
  namespace: noctf
  labels:
    app.kubernetes.io/part-of: noctf
spec:
  podSelector:
    matchLabels:
      app: worker
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: prometheus
    ports:
    - protocol: TCP
      port: 9464
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: runner-to-nats
  namespace: noctf
  labels:
    app.kubernetes.io/part-of: noctf
spec:
  podSelector:
    matchLabels:
      app: runner
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: nats
    ports:
    - protocol: TCP
      port: 4222
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nats-from-runner
  namespace: noctf
  labels:
    app.kubernetes.io/part-of: noctf
spec:
  podSelector:
    matchLabels:
      app: nats
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: runner
    ports:
    - protocol: TCP
      port: 4222
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: runner-to-loki
  namespace: noctf
  labels:
    app.kubernetes.io/part-of: noctf
spec:
  podSelector:
    matchLabels:
      app: runner
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: loki
    ports:
    - protocol: TCP
      port: 3100
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: loki-from-runner
  namespace: noctf
  labels:
    app.kubernetes.io/part-of: noctf
spec:
  podSelector:
    matchLabels:
      app: loki
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: runner
    ports:
    - protocol: TCP
      port: 3100
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: prometheus-to-runner
  namespace: noctf
  labels:
    app.kubernetes.io/part-of: noctf
spec:
  podSelector:
    matchLabels:
      app: prometheus
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: runner
    ports:
    - protocol: TCP
      port: 9464
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: runner-from-prometheus
  namespace: noctf
  labels:
    app.kubernetes.io/part-of: noctf
spec:
  podSelector:
    matchLabels:
      app: runner
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: prometheus
    ports:
    - protocol: TCP
      port: 9464
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: grafana-to-prometheus
  namespace: noctf
  labels:
    app.kubernetes.io/part-of: noctf
spec:
  podSelector:
    matchLabels:
      app: grafana
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: prometheus
    ports:
    - protocol: TCP
      port: 9090
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: prometheus-from-grafana
  namespace: noctf
  labels:
    app.kubernetes.io/part-of: noctf
spec:
  podSelector:
    matchLabels:
      app: prometheus
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: grafana
    ports:
    - protocol: TCP
      port: 9090
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: grafana-to-loki
  namespace: noctf
  labels:
    app.kubernetes.io/part-of: noctf
spec:
  podSelector:
    matchLabels:
      app: grafana
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: loki
    ports:
    - protocol: TCP
      port: 3100
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: loki-from-grafana
  namespace: noctf
  labels:
    app.kubernetes.io/part-of: noctf
spec:
  podSelector:
    matchLabels:
      app: loki
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: grafana
    ports:
    - protocol: TCP
      port: 3100
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: prometheus-to-kubernetes-api
  namespace: noctf
  labels:
    app.kubernetes.io/part-of: noctf
spec:
  endpointSelector:
    matchLabels:
      app: prometheus
  egress:
  - toEntities:
    - kube-apiserver
    toPorts:
    - ports:
      - port: '443'
        protocol: TCP
      - port: '6443'
        protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: runner-to-archive-api
  namespace: noctf
spec:
  podSelector:
    matchLabels:
      app: runner
  policyTypes: [Egress]
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: backend
      ports:
        - protocol: TCP
          port: 8080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-from-runner-archive-downloads
  namespace: noctf
spec:
  podSelector:
    matchLabels:
      app: backend
  policyTypes: [Ingress]
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: runner
      ports:
        - protocol: TCP
          port: 8080
